# py-music

./: .gitignore  README.md  intro-dl.ipynb  main.py  midi_parser.py  py-music.ipynb  pyproject.toml  song_utils.py  util.py  utils.py
Utils/: bit.py  midi_parser.py  song_utils.py  utils.py
notebooks/: py-music.ipynb
