[project]
name = "py-music"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "comet-ml>=3.49.4",
    "dotenv>=0.9.9",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "mitdeeplearning>=0.7.5",
    "music21>=9.5.0",
    "pandas>=2.2.3",
    "simpleaudio>=1.0.4",
    "timidity>=0.1.2",
    "torch>=2.6.0",
]
